# cuttlefish

./: .gitignore  README.md  ceph.conf
conf/: .gitignore  ceph.sample.conf
overlay/: autorestart.sh  monstack.py  node_exporter.sh  process_exporter.yml
pkg/: pyproject.toml
pkg/src/cuttlefish/: __init__.py  placement.py  util.py
pkg/src/cuttlefish/cli/: __init__.py  controller.py  keyring.py  manifest.py  shell.py  worker.py
pkg/src/cuttlefish/cluster/: __init__.py  slurm.py
pkg/src/cuttlefish/container/: __init__.py  apptainer.py
pkg/src/cuttlefish/deploy/: __init__.py
pkg/src/cuttlefish/io/: __init__.py
pkg/src/cuttlefish/schema/: __init__.py
pkg/src/cuttlefish/shell/: __init__.py
scripts/: base_conf.sh  requirements.txt  setup.sh  wrapper.sh
